jueves 16 noviembre mañana

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,24 +1,23 @@
 			<!-- about__area start -->
 			<section class="about__area">
 				<div class="grey-bg about__section__wrapper pt-180 pb-70 pt-lg-120 pb-lg-30">
-					<div data-text="About" class="big-style-text">About</div>
-					<img class="about__shape__1" src="assets/img/shape/about-line-2a.svg" alt="About Shape">
-					<img class="about__shape__2" src="assets/img/shape/about-line-3a.svg" alt="About Shape">
+					<div data-text="About" class="big-style-text">sobre nosotros</div>
+					<img class="about__shape__1" src="/assets/img/shape/about-line-2a.svg" alt="About Shape">
+					<img class="about__shape__2" src="/assets/img/shape/about-line-3a.svg" alt="About Shape">
 					<div class="container">
 						<div class="row align-items-center mb-20">
 							<div class="col-lg-9 pe-lg-0">
 								<div class="section__title text-lg-start text-center mb-30">
-									<h4 class="sub__title__one mb-0">About us</h4>
+									<h4 class="sub__title__one mb-0">sobre nosotros</h4>
 									<div class="snake-line mb-15">
-										<img src="assets/img/shape/snake-line-1a.svg" alt="line">
+										<img src="/assets/img/shape/snake-line-1a.svg" alt="line">
 									</div>
-									<h2 class="section__title__one">Empowering industries with innovative solutions, we
-										revolutionize factory operations for enhanced efficiency and productivity.</h2>
+									<h2 class="section__title__one">Más de 10 años de experiencia en el sector de la pocería con miles de clientes satisfechos. Consulta nuestras reseñas y podrás observar que para nosotros la satisfacción del cliente es lo primero. Pasanos tu presupuesto sin compromiso, lo estudiamos y te lo mejoramos. Trabajamos en toda la provincia de Madrid y zonas aledañas de Toledo y Guadalajara, las 24 horas del día, los 7 días a la semana.</h2>
 								</div>
 							</div>
 							<div class="col-lg-3 d-flex justify-content-center justify-content-lg-end">
 								<div class="about__circular__box mb-30">
-									<img src="assets/img/about/circular-text.png" alt="Circular Text">
+									<img src="/assets/img/about/circular-text.png" alt="Circular Text">
 									<span>A+</span>
 								</div>
 							</div>
@@ -27,37 +26,37 @@
 							<div class="col-lg-3 col-md-6">
 								<div class="single__box mb-30">
 									<div class="icon mb-35">
-										<img class="front-icon" src="assets/img/icon/icon-1a.svg" alt="Icon">
-										<img class="back-icon" src="assets/img/icon/icon-1w.svg" alt="Icon">
+										<img class="front-icon" src="/assets/img/icon/icon-1a.svg" alt="Icon">
+										<img class="back-icon" src="/assets/img/icon/icon-1w.svg" alt="Icon">
 									</div>
-									<h3 class="single__box__title"><a href="#">Fully Automation</a></h3>
+									<h3 class="single__box__title"><a href="#">Última tecnología</a></h3>
 								</div>
 							</div>
 							<div class="col-lg-3 col-md-6">
 								<div class="single__box mb-30">
 									<div class="icon mb-35">
-										<img class="front-icon" src="assets/img/icon/icon-2a.svg" alt="Icon">
-										<img class="back-icon" src="assets/img/icon/icon-2w.svg" alt="Icon">
+										<img class="front-icon" src="/assets/img/icon/icon-2a.svg" alt="Icon">
+										<img class="back-icon" src="/assets/img/icon/icon-2w.svg" alt="Icon">
 									</div>
-									<h3 class="single__box__title"><a href="#">Scalable Solutions</a></h3>
+									<h3 class="single__box__title"><a href="#">Servicio 24 Horas</a></h3>
 								</div>
 							</div>
 							<div class="col-lg-3 col-md-6">
 								<div class="single__box mb-30">
 									<div class="icon mb-35">
-										<img class="front-icon" src="assets/img/icon/icon-3a.svg" alt="Icon">
-										<img class="back-icon" src="assets/img/icon/icon-3w.svg" alt="Icon">
+										<img class="front-icon" src="/assets/img/icon/icon-3a.svg" alt="Icon">
+										<img class="back-icon" src="/assets/img/icon/icon-3w.svg" alt="Icon">
 									</div>
-									<h3 class="single__box__title"><a href="#">Energy Efficiency</a></h3>
+									<h3 class="single__box__title"><a href="#">Precios Baratos</a></h3>
 								</div>
 							</div>
 							<div class="col-lg-3 col-md-6">
 								<div class="single__box mb-30">
 									<div class="icon mb-35">
-										<img class="front-icon" src="assets/img/icon/icon-4a.svg" alt="Icon">
-										<img class="back-icon" src="assets/img/icon/icon-4w.svg" alt="Icon">
+										<img class="front-icon" src="/assets/img/icon/icon-4a.svg" alt="Icon">
+										<img class="back-icon" src="/assets/img/icon/icon-4w.svg" alt="Icon">
 									</div>
-									<h3 class="single__box__title"><a href="#">Safe & Secure</a></h3>
+									<h3 class="single__box__title"><a href="#">Con Garantía</a></h3>
 								</div>
 							</div>
 						</div>
