--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -7,7 +7,7 @@
 							<div class="section__title text-center mb-50">
 								<h4 class="sub__title__one mb-0">Latest News</h4>
 								<div class="snake-line mb-15">
-									<img src="assets/img/shape/snake-line-1a.svg" alt="line">
+									<img src="/assets/img/shape/snake-line-1a.svg" alt="line">
 								</div>
 								<h2 class="section__title__one">Our Recent Articles</h2>
 							</div>
@@ -17,7 +17,7 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="blog__one mb-30">
 								<div class="blog__thumb mb-25">
-									<a href="blog-details.html"><img class="w-100" src="assets/img/blog/blog-1a.jpg"
+									<a href="blog-details.html"><img class="w-100" src="/assets/img/blog/blog-1a.jpg"
 											alt="Blog"></a>
 								</div>
 								<div class="blog__meta mb-25">
@@ -31,7 +31,7 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="blog__one mb-30">
 								<div class="blog__thumb mb-25">
-									<a href="blog-details.html"><img class="w-100" src="assets/img/blog/blog-2a.jpg"
+									<a href="blog-details.html"><img class="w-100" src="/assets/img/blog/blog-2a.jpg"
 											alt="Blog"></a>
 								</div>
 								<div class="blog__meta mb-25">
@@ -45,7 +45,7 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="blog__one mb-30">
 								<div class="blog__thumb mb-25">
-									<a href="blog-details.html"><img class="w-100" src="assets/img/blog/blog-3a.jpg"
+									<a href="blog-details.html"><img class="w-100" src="/assets/img/blog/blog-3a.jpg"
 											alt="Blog"></a>
 								</div>
 								<div class="blog__meta mb-25">
@@ -59,7 +59,7 @@
 					</div>
 					<div class="more__btn__box text-center mt-30">
 						<a href="contact.html" class="ht_btn hover-bg"><span>See More <img
-									src="assets/img/icon/arrow1.svg" alt=""></span></a>
+									src="/assets/img/icon/arrow1.svg" alt=""></span></a>
 					</div>
 				</div>
 			</section>
