--- a/src/components/CaseStudy.astro
+++ b/src/components/CaseStudy.astro
@@ -8,7 +8,7 @@
 							<div class="section__title text-center mb-60">
 								<h4 class="sub__title__one mb-0">Case Study</h4>
 								<div class="snake-line mb-15">
-									<img src="assets/img/shape/snake-line-1a.svg" alt="line">
+									<img src="/assets/img/shape/snake-line-1a.svg" alt="line">
 								</div>
 								<h2 class="section__title__one">Case Studies Demonstrating Our Impact in the Industry
 								</h2>
@@ -20,120 +20,120 @@
 							<div class="swiper-slide">
 								<div class="case__single__box">
 									<div class="case__thumb">
-										<img class="img-fluid" src="assets/img/case/case-1a.jpg" alt="">
+										<img class="img-fluid" src="/assets/img/case/case-1a.jpg" alt="">
 									</div>
 									<a href="case-details.html" class="icon"><i class="bi bi-plus"></i></a>
 									<div class="case__content">
 										<h3 class="case__title mb-25">Digital Transformation for Industrial Excellence
 										</h3>
 										<a href="case-details.html" class="case__btn">More Details <span><img
-													src="assets/img/icon/arrow2.svg" alt=""></span></a>
-										<img class="overlay__icon" src="assets/img/icon/icon-8a.svg" alt="Icon">
+													src="/assets/img/icon/arrow2.svg" alt=""></span></a>
+										<img class="overlay__icon" src="/assets/img/icon/icon-8a.svg" alt="Icon">
 									</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="case__single__box">
 									<div class="case__thumb">
-										<img class="img-fluid" src="assets/img/case/case-2a.jpg" alt="">
+										<img class="img-fluid" src="/assets/img/case/case-2a.jpg" alt="">
 									</div>
 									<a href="case-details.html" class="icon"><i class="bi bi-plus"></i></a>
 									<div class="case__content">
 										<h3 class="case__title mb-25">Digital Transformation for Industrial Excellence
 										</h3>
 										<a href="case-details.html" class="case__btn">More Details <span><img
-													src="assets/img/icon/arrow2.svg" alt=""></span></a>
-										<img class="overlay__icon" src="assets/img/icon/icon-8a.svg" alt="Icon">
+													src="/assets/img/icon/arrow2.svg" alt=""></span></a>
+										<img class="overlay__icon" src="/assets/img/icon/icon-8a.svg" alt="Icon">
 									</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="case__single__box">
 									<div class="case__thumb">
-										<img class="img-fluid" src="assets/img/case/case-3a.jpg" alt="">
+										<img class="img-fluid" src="/assets/img/case/case-3a.jpg" alt="">
 									</div>
 									<a href="case-details.html" class="icon"><i class="bi bi-plus"></i></a>
 									<div class="case__content">
 										<h3 class="case__title mb-25">Digital Transformation for Industrial Excellence
 										</h3>
 										<a href="case-details.html" class="case__btn">More Details <span><img
-													src="assets/img/icon/arrow2.svg" alt=""></span></a>
-										<img class="overlay__icon" src="assets/img/icon/icon-8a.svg" alt="Icon">
+													src="/assets/img/icon/arrow2.svg" alt=""></span></a>
+										<img class="overlay__icon" src="/assets/img/icon/icon-8a.svg" alt="Icon">
 									</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="case__single__box">
 									<div class="case__thumb">
-										<img class="img-fluid" src="assets/img/case/case-4a.jpg" alt="">
+										<img class="img-fluid" src="/assets/img/case/case-4a.jpg" alt="">
 									</div>
 									<a href="case-details.html" class="icon"><i class="bi bi-plus"></i></a>
 									<div class="case__content">
 										<h3 class="case__title mb-25">Digital Transformation for Industrial Excellence
 										</h3>
 										<a href="case-details.html" class="case__btn">More Details <span><img
-													src="assets/img/icon/arrow2.svg" alt=""></span></a>
-										<img class="overlay__icon" src="assets/img/icon/icon-8a.svg" alt="Icon">
+													src="/assets/img/icon/arrow2.svg" alt=""></span></a>
+										<img class="overlay__icon" src="/assets/img/icon/icon-8a.svg" alt="Icon">
 									</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="case__single__box">
 									<div class="case__thumb">
-										<img class="img-fluid" src="assets/img/case/case-1a.jpg" alt="">
+										<img class="img-fluid" src="/assets/img/case/case-1a.jpg" alt="">
 									</div>
 									<a href="case-details.html" class="icon"><i class="bi bi-plus"></i></a>
 									<div class="case__content">
 										<h3 class="case__title mb-25">Digital Transformation for Industrial Excellence
 										</h3>
 										<a href="case-details.html" class="case__btn">More Details <span><img
-													src="assets/img/icon/arrow2.svg" alt=""></span></a>
-										<img class="overlay__icon" src="assets/img/icon/icon-8a.svg" alt="Icon">
+													src="/assets/img/icon/arrow2.svg" alt=""></span></a>
+										<img class="overlay__icon" src="/assets/img/icon/icon-8a.svg" alt="Icon">
 									</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="case__single__box">
 									<div class="case__thumb">
-										<img class="img-fluid" src="assets/img/case/case-2a.jpg" alt="">
+										<img class="img-fluid" src="/assets/img/case/case-2a.jpg" alt="">
 									</div>
 									<a href="case-details.html" class="icon"><i class="bi bi-plus"></i></a>
 									<div class="case__content">
 										<h3 class="case__title mb-25">Digital Transformation for Industrial Excellence
 										</h3>
 										<a href="case-details.html" class="case__btn">More Details <span><img
-													src="assets/img/icon/arrow2.svg" alt=""></span></a>
-										<img class="overlay__icon" src="assets/img/icon/icon-8a.svg" alt="Icon">
+													src="/assets/img/icon/arrow2.svg" alt=""></span></a>
+										<img class="overlay__icon" src="/assets/img/icon/icon-8a.svg" alt="Icon">
 									</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="case__single__box">
 									<div class="case__thumb">
-										<img class="img-fluid" src="assets/img/case/case-3a.jpg" alt="">
+										<img class="img-fluid" src="/assets/img/case/case-3a.jpg" alt="">
 									</div>
 									<a href="case-details.html" class="icon"><i class="bi bi-plus"></i></a>
 									<div class="case__content">
 										<h3 class="case__title mb-25">Digital Transformation for Industrial Excellence
 										</h3>
 										<a href="case-details.html" class="case__btn">More Details <span><img
-													src="assets/img/icon/arrow2.svg" alt=""></span></a>
-										<img class="overlay__icon" src="assets/img/icon/icon-8a.svg" alt="Icon">
+													src="/assets/img/icon/arrow2.svg" alt=""></span></a>
+										<img class="overlay__icon" src="/assets/img/icon/icon-8a.svg" alt="Icon">
 									</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="case__single__box">
 									<div class="case__thumb">
-										<img class="img-fluid" src="assets/img/case/case-4a.jpg" alt="">
+										<img class="img-fluid" src="/assets/img/case/case-4a.jpg" alt="">
 									</div>
 									<a href="case-details.html" class="icon"><i class="bi bi-plus"></i></a>
 									<div class="case__content">
 										<h3 class="case__title mb-25">Digital Transformation for Industrial Excellence
 										</h3>
 										<a href="case-details.html" class="case__btn">More Details <span><img
-													src="assets/img/icon/arrow2.svg" alt=""></span></a>
-										<img class="overlay__icon" src="assets/img/icon/icon-8a.svg" alt="Icon">
+													src="/assets/img/icon/arrow2.svg" alt=""></span></a>
+										<img class="overlay__icon" src="/assets/img/icon/icon-8a.svg" alt="Icon">
 									</div>
 								</div>
 							</div>
