--- a/src/components/ChoseUs.astro
+++ b/src/components/ChoseUs.astro
@@ -1,8 +1,8 @@
 			<!-- chose__us__area start -->
 			<section class="chose__us__area pt-120 pt-lg-60 pb-85 pb-lg-30">
 				<div class="chose__section__wrapper">
-					<div class="big-style-text">Why</div>
-					<div class="chose__video__content" data-background="assets/img/chose/chose-video-bg-1.jpg">
+					<div class="big-style-text">Queremos</div>
+					<div class="chose__video__content" data-background="/assets/img/chose/chose-video-bg-1.jpg">
 						<div class="video__wrapper">
 							<a class="popup-video mb-30" href="https://www.youtube.com/watch?v=lTxn2BuqyzU"><i
 									class="bi bi-play-fill"></i></a>
@@ -13,23 +13,21 @@
 							<div class="col-lg-6"></div>
 							<div class="col-lg-6">
 								<div class="chose__text__wrapper ps-xl-5 ms-xl-4 mb-30 pt-50">
-									<h4 class="sub__title__one mb-0">Why Choose Us</h4>
+									<h4 class="sub__title__one mb-0">Queremos ser tu empresa de confianza</h4>
 									<div class="snake-line mb-15">
-										<img src="assets/img/shape/snake-line-1a.svg" alt="line">
+										<img src="/assets/img/shape/snake-line-1a.svg" alt="line">
 									</div>
-									<h2 class="section__title__one mb-30">The Benefits of Choosing Our Industrial
-										Expertise
+									<h2 class="section__title__one mb-30">Beneficios de trabajar con nosotros
 									</h2>
 									<ul class="text-list list-none">
-										<li>Expertise in Industry-Specific Solutions</li>
-										<li>Cutting-Edge Technologies and Innovation</li>
-										<li>Regulatory Compliance and Risk Mitigation</li>
-										<li>Reliable and Timely Execution</li>
-										<li>Scalability and Flexibility</li>
+										<li>Garantía en todos nuestros servicios</li>
+										<li>Ofertas para empresas y Administradores de Fincas</li>
+										<li>Programa de puntos por cliente, cuanto más nos llames más descuento final obtendrás</li>
+										<li>Servicio 24 horas</li>
+										<li>Disponibilidad Inmediata en Urgencias</li>
 									</ul>
 									<div class="mt-60">
-										<a href="contact.html" class="ht_btn hover-bg"><span>More Details <img
-													src="assets/img/icon/arrow1.svg" alt=""></span></a>
+										<a href="contact.html" class="ht_btn hover-bg"><span>Compruébalo</span></a>
 									</div>
 								</div>
 							</div>
