--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,51 +1,78 @@
-<div class="grid grid-cols-4">
-    <form onsubmit="return false;" class="space-y-6">
-        <!-- Text Input -->
-        <div class="space-y-1">
-            <label class="font-medium" for="tk-form-elements-name">Text</label>
-            <input
-                class="w-full block border border-gray-200 rounded px-3 py-2 leading-6 focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
-                type="text"
-                id="tk-form-elements-name"
-                placeholder="Enter your name"
-            />
+<!--contact__section start-->
+<div class="contact__section pt-180 pb-140 pt-lg-120 pb-lg-120">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="contact__info__wrapper me-xxl-4 pe-xxl-5 mb-45">
+                    <div class="single__info__box">
+                        <div class="icon">
+                            <i class="bi bi-telephone"></i>
+                        </div>
+                        <span>(704) 555-0127</span>
+                    </div>
+                    <div class="single__info__box">
+                        <div class="icon">
+                            <i class="bi bi-geo-alt"></i>
+                        </div>
+                        <span>414 Rd. New York,USA</span>
+                    </div>
+                    <div class="single__info__box">
+                        <div class="icon">
+                            <i class="bi bi-envelope"></i>
+                        </div>
+                        <span>Graham@mail.com</span>
+                    </div>
+                    <div class="single__info__box mb-40">
+                        <div class="icon">
+                            <i class="bi bi-briefcase"></i>
+                        </div>
+                        <span>Steel Management</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div class="contact-form-one">
+                    <h3 class="section__title__one mb-50">Send Us Message</h3>
+                    <form class="widget-form" action="#">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label class="label">First Name</label>
+                                <input type="text" name="fname" placeholder="First Name">
+                            </div>
+                            <div class="col-md-6">
+                                <label class="label">Last Name</label>
+                                <input type="text" name="lname" placeholder="Last Name">
+                            </div>
+                            <div class="col-md-6">
+                                <label class="label">Email</label>
+                                <input type="email" name="email" placeholder="Email ID">
+                            </div>
+                            <div class="col-md-6">
+                                <label class="label">Phone No</label>
+                                <input type="text" name="phone" placeholder="Phone">
+                            </div>
+                            <div class="col-md-6">
+                                <label class="label">Country</label>
+                                <input type="text" name="country" placeholder="Country Name">
+                            </div>
+                            <div class="col-md-6">
+                                <label class="label">Birthdate</label>
+                                <input type="date" name="date">
+                            </div>
+                            <div class="col-md-12 mb-25">
+                                <label class="label">Question</label>
+                                <textarea name="message" placeholder="Write Your Questions"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <button class="ht_btn hover-bg border-0">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <!-- END Text Input -->
-
-        <!-- Email Input -->
-        <div class="space-y-1">
-            <label class="font-medium" for="tk-form-elements-email">Email</label>
-            <input
-                class="w-full block border border-gray-200 rounded px-3 py-2 leading-6 focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
-                type="email"
-                id="tk-form-elements-email"
-                placeholder="Enter your email"
-            />
-        </div>
-        <!-- END Email Input -->
-
-        <!-- Password Input -->
-        <div class="space-y-1">
-            <label class="font-medium" for="tk-form-elements-password">Password</label
-            >
-            <input
-                class="w-full block border border-gray-200 rounded px-3 py-2 leading-6 focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
-                type="password"
-                id="tk-form-elements-password"
-                placeholder="Enter your password"
-            />
-        </div>
-        <!-- END Password Input -->
-        <!-- Textarea -->
-        <div class="space-y-1">
-            <label class="font-medium" for="tk-form-elements-textarea">Textarea</label
-            >
-            <textarea
-                class="w-full block border border-gray-200 rounded px-3 py-2 focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
-                id="tk-form-elements-textarea"
-                rows="4"
-                placeholder="Enter further details"></textarea>
-        </div>
-        <!-- END Textarea -->
-    </form>
+    </div>
 </div>
+<!--contact__section end-->
+
+<!-- cta__area start -->
