--- a/src/components/Counter.astro
+++ b/src/components/Counter.astro
@@ -1,34 +1,34 @@
 			<!-- counter__area star -->
 			<section class="counter__area">
 				<div class="grey-bg counter__section__wrapper">
-					<img class="shapes__1 d-none d-xl-inline-block" src="assets/img/shape/line-9a.svg" alt="Shape">
-					<img class="shapes__2 d-none d-xl-inline-block" src="assets/img/shape/line-10a.svg" alt="Shape">
+					<img class="shapes__1 d-none d-xl-inline-block" src="/assets/img/shape/line-9a.svg" alt="Shape">
+					<img class="shapes__2 d-none d-xl-inline-block" src="/assets/img/shape/line-10a.svg" alt="Shape">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-3 col-md-6 col-sm-6">
 								<div class="counter__box mb-30">
 									<h3 class="counter__number"><span class="counter">12</span></h3>
-									<p>Years of<br />Expertise</p>
+									<p>Años de <br />Experiencia</p>
 								</div>
 							</div>
 							<div class="col-lg-3 col-md-6 col-sm-6">
 								<div class="counter__box ps-xl-5 mb-30">
-									<h3 class="counter__number"><span class="counter">20</span></h3>
-									<p>Total of<br />Services</p>
+									<h3 class="counter__number"><span class="counter">950</span></h3>
+									<p>Total de<br />Servicios</p>
 								</div>
 							</div>
 							<div class="col-lg-3 col-md-6 col-sm-6">
 								<div class="counter__box ps-xl-5 mb-30">
-									<h3 class="counter__number"><span class="counter">10</span>k</h3>
-									<p>Worldwide<br />
-										Clients</p>
+									<h3 class="counter__number"><span class="counter">2000</span></h3>
+									<p>Clientes<br />
+										Satisfechos</p>
 								</div>
 							</div>
 							<div class="col-lg-3 col-md-6 col-sm-6 d-md-flex justify-content-lg-end">
 								<div class="counter__box mb-30">
-									<h3 class="counter__number"><span class="counter">1</span>k</h3>
-									<p>Total of<br />
-										Services</p>
+									<h3 class="counter__number"><span class="counter">352</span></h3>
+									<p>Servicios Urgentes<br />
+										Realizados</p>
 								</div>
 							</div>
 						</div>
