--- a/src/components/ServiceArea.astro
+++ b/src/components/ServiceArea.astro
@@ -1,15 +1,15 @@
 			<!-- services__area start -->
 			<section class="services__area pt-180 pb-45 pt-lg-60 pb-lg-40">
-				<div class="big-style-text">Service</div>
+				<div class="big-style-text">Servicios</div>
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-lg-6">
 							<div class="section__title text-center mb-50">
-								<h4 class="sub__title__one mb-0">Our Services</h4>
+								<h4 class="sub__title__one mb-0">Nuestros Servicios</h4>
 								<div class="snake-line mb-15">
-									<img src="assets/img/shape/snake-line-1a.svg" alt="line">
+									<img src="/assets/img/shape/snake-line-1a.svg" alt="line">
 								</div>
-								<h2 class="section__title__one">Transform Your Company with Our <span>Services</span>
+								<h2 class="section__title__one">Obras de Pocería baratas y de <span>Calidad</span>
 								</h2>
 							</div>
 						</div>
@@ -21,18 +21,17 @@
 									<div class="swiper-slide">
 										<div class="single__services__box mb-60">
 											<div class="services__thumb">
-												<img class="w-100" src="assets/img/service/service-1a.jpg"
+												<img class="w-100" src="/assets/img/service/service-1a.jpg"
 													alt="Service">
 											</div>
 											<div class="services__content">
 												<div class="services__icon">
-													<img src="assets/img/icon/icon-5a.svg" alt="Icon">
+													<img src="/assets/img/icon/icon-5a.svg" alt="Icon">
 												</div>
 												<h4 class="single__service__title"><a
-														href="services-detail.html">Industrial
-														Automation</a>
+														href="services-detail.html">Desatascos</a>
 												</h4>
-												<a href="services-detail.html"><img src="assets/img/icon/long-arrow.svg"
+												<a href="services-detail.html"><img src="/assets/img/icon/long-arrow.svg"
 														alt="Arrow"></a>
 											</div>
 										</div>
@@ -40,18 +39,17 @@
 									<div class="swiper-slide">
 										<div class="single__services__box mb-60">
 											<div class="services__thumb">
-												<img class="w-100" src="assets/img/service/service-2a.jpg"
+												<img class="w-100" src="/assets/img/service/service-2a.jpg"
 													alt="Service">
 											</div>
 											<div class="services__content">
 												<div class="services__icon">
-													<img src="assets/img/icon/icon-6a.svg" alt="Icon">
+													<img src="/assets/img/icon/icon-6a.svg" alt="Icon">
 												</div>
 												<h4 class="single__service__title"><a
-														href="services-detail.html">Manufacturing
-														System</a>
+														href="services-detail.html">Arquetas</a>
 												</h4>
-												<a href="services-detail.html"><img src="assets/img/icon/long-arrow.svg"
+												<a href="services-detail.html"><img src="/assets/img/icon/long-arrow.svg"
 														alt="Arrow"></a>
 											</div>
 										</div>
@@ -59,19 +57,16 @@
 									<div class="swiper-slide">
 										<div class="single__services__box mb-60">
 											<div class="services__thumb">
-												<img class="w-100" src="assets/img/service/service-3a.jpg"
+												<img class="w-100" src="/assets/img/service/service-3a.jpg"
 													alt="Service">
 											</div>
 											<div class="services__content">
 												<div class="services__icon">
-													<img src="assets/img/icon/icon-7a.svg" alt="Icon">
+													<img src="/assets/img/icon/icon-7a.svg" alt="Icon">
 												</div>
-												<h4 class="single__service__title"><a href="services-detail.html">Oil
-														and
-														Gas
-														Refinery</a>
+												<h4 class="single__service__title"><a href="services-detail.html">Fregaderos</a>
 												</h4>
-												<a href="services-detail.html"><img src="assets/img/icon/long-arrow.svg"
+												<a href="services-detail.html"><img src="/assets/img/icon/long-arrow.svg"
 														alt="Arrow"></a>
 											</div>
 										</div>
@@ -79,18 +74,17 @@
 									<div class="swiper-slide">
 										<div class="single__services__box mb-60">
 											<div class="services__thumb">
-												<img class="w-100" src="assets/img/service/service-1a.jpg"
+												<img class="w-100" src="/assets/img/service/service-1a.jpg"
 													alt="Service">
 											</div>
 											<div class="services__content">
 												<div class="services__icon">
-													<img src="assets/img/icon/icon-5a.svg" alt="Icon">
+													<img src="/assets/img/icon/icon-5a.svg" alt="Icon">
 												</div>
 												<h4 class="single__service__title"><a
-														href="services-detail.html">Industrial
-														Automation</a>
+														href="services-detail.html">Pozos</a>
 												</h4>
-												<a href="services-detail.html"><img src="assets/img/icon/long-arrow.svg"
+												<a href="services-detail.html"><img src="/assets/img/icon/long-arrow.svg"
 														alt="Arrow"></a>
 											</div>
 										</div>
@@ -98,18 +92,17 @@
 									<div class="swiper-slide">
 										<div class="single__services__box mb-60">
 											<div class="services__thumb">
-												<img class="w-100" src="assets/img/service/service-2a.jpg"
+												<img class="w-100" src="/assets/img/service/service-2a.jpg"
 													alt="Service">
 											</div>
 											<div class="services__content">
 												<div class="services__icon">
-													<img src="assets/img/icon/icon-6a.svg" alt="Icon">
+													<img src="/assets/img/icon/icon-6a.svg" alt="Icon">
 												</div>
 												<h4 class="single__service__title"><a
-														href="services-detail.html">Manufacturing
-														System</a>
+														href="services-detail.html">Alcantarillado</a>
 												</h4>
-												<a href="services-detail.html"><img src="assets/img/icon/long-arrow.svg"
+												<a href="services-detail.html"><img src="/assets/img/icon/long-arrow.svg"
 														alt="Arrow"></a>
 											</div>
 										</div>
