--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@
   <div class="offset-sidebar">
     <div class="offset-widget offset-logo mb-30">
       <a href="index.html">
-        <img src="assets/img/logo/header-logo-1.png" alt="logo">
+        <img src="/assets/img/logo/header-logo-1.png" alt="logo">
       </a>
     </div>
     <div class="mobile-menu"></div>
@@ -53,27 +53,27 @@
   <!-- theme__main__banner start -->
   <section class="theme__main__banner black-bg pt-215 pb-205 pb-lg-100">
     <div class="shapes__blur"></div>
-    <img class="shapes shapes__1" src="assets/img/hero/hero-steel-1.png" alt="Shape One">
-    <img class="shapes shapes__2" src="assets/img/shape/hero-line-1.svg" alt="Shape Two">
-    <img class="shapes shapes__3" src="assets/img/shape/star-1.svg" alt="Shape Three">
+    <img class="shapes shapes__1" src="/assets/img/hero/hero-steel-1.png" alt="Shape One">
+    <img class="shapes shapes__2" src="/assets/img/shape/hero-line-1.svg" alt="Shape Two">
+    <img class="shapes shapes__3" src="/assets/img/shape/star-1.svg" alt="Shape Three">
     <div class="circular__box">
-      <img class="circular__text" src="assets/img/hero/circular-text.png" alt="Circular">
-      <img class="circular__img" src="assets/img/hero/steel-parts.png" alt="Circular">
+      <img class="circular__text" src="/assets/img/hero/circular-text.png" alt="Circular">
+      <img class="circular__img" src="/assets/img/hero/steel-parts.png" alt="Circular">
     </div>
     <div class="container">
       <div class="row align-items-center">
         <div class="col-xl-9 col-lg-12">
           <div class="theme__content text-xl-start text-center mb-5 mb-lg-0">
-            <h4 class="sub__title mb-25">Optimizing Efficiency</h4>
-            <h2 class="main__title mb-45">Industry & Factory Solutions for Success
+            <h4 class="sub__title mb-25">Desatasco de Tuberías </h4>
+            <h4 class="sub__title mb-25">Obras de Pocería</h4>
+            <h2 class="main__title mb-45">Pocería Pociten 
             </h2>
-            <a href="contact.html" class="ht_btn"><span>Explore Now <img
-                  src="assets/img/icon/arrow1.svg" alt=""></span></a>
+            <a href="contact.html" class="ht_btn"><span>llámanos</span></a>
           </div>
         </div>
         <div class="col-lg-6 d-none">
           <div class="hero__img">
-            <img src="assets/img/hero/hero-main-1a.jpg
+            <img src="/assets/img/hero/hero-main-1a.jpg
             " alt="hero__img">
           </div>
         </div>
@@ -82,35 +82,35 @@
     <div class="swiper hero__slider">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="assets/img/hero/hero-main-1a.jpg" alt="Hero Image">
+          <img src="/assets/img/hero/hero-main-1a.jpg" alt="Hero Image">
         </div>
         <div class="swiper-slide">
-          <img src="assets/img/hero/hero-main-2a.jpg" alt="Hero Image">
+          <img src="/assets/img/hero/hero-main-2a.jpg" alt="Hero Image">
         </div>
         <div class="swiper-slide">
-          <img src="assets/img/hero/hero-main-4a.jpg" alt="Hero Image">
+          <img src="/assets/img/hero/hero-main-4a.jpg" alt="Hero Image">
         </div>
         <div class="swiper-slide">
-          <img src="assets/img/hero/hero-main-3a.jpg" alt="Hero Image">
+          <img src="/assets/img/hero/hero-main-3a.jpg" alt="Hero Image">
         </div>
         <div class="swiper-slide">
-          <img src="assets/img/hero/hero-main-4a.jpg" alt="Hero Image">
+          <img src="/assets/img/hero/hero-main-4a.jpg" alt="Hero Image">
         </div>
         <div class="swiper-slide">
-          <img src="assets/img/hero/hero-main-1a.jpg" alt="Hero Image">
+          <img src="/assets/img/hero/hero-main-1a.jpg" alt="Hero Image">
         </div>
         <div class="swiper-slide">
-          <img src="assets/img/hero/hero-main-2a.jpg" alt="Hero Image">
+          <img src="/assets/img/hero/hero-main-2a.jpg" alt="Hero Image">
         </div>
         <div class="swiper-slide">
-          <img src="assets/img/hero/hero-main-3a.jpg" alt="Hero Image">
+          <img src="/assets/img/hero/hero-main-3a.jpg" alt="Hero Image">
         </div>
       </div>
 
       <div class="swiper-pagination"></div>
 
-      <div class="swiper-button-prev"><img src="assets/img/icon/chevron-arrow-left.svg" alt="Arrow"></div>
-      <div class="swiper-button-next"><img src="assets/img/icon/chevron-arrow-right.svg" alt="Arrow">
+      <div class="swiper-button-prev"><img src="/assets/img/icon/chevron-arrow-left.svg" alt="Arrow"></div>
+      <div class="swiper-button-next"><img src="/assets/img/icon/chevron-arrow-right.svg" alt="Arrow">
       </div>
 
     </div>
