--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -37,7 +37,7 @@
 
             <figure class="product__image-container">
                 <a href="product.html" class="product-img">
-                    <img src="assets/img/product/cart-1.jpg" alt="product">
+                    <img src="/assets/img/product/cart-1.jpg" alt="product">
                 </a>
             </figure>
             <a href="#" class="remove-btn" title="Product remove"><i class="fal fa-times"></i></a>
@@ -56,7 +56,7 @@
 
             <figure class="product__image-container">
                 <a href="product.html" class="product-img">
-                    <img src="assets/img/product/cart-2.jpg" alt="product">
+                    <img src="/assets/img/product/cart-2.jpg" alt="product">
                 </a>
             </figure>
             <a href="#" class="remove-btn" title="Product remove"><i class="fal fa-times"></i></a>
@@ -75,7 +75,7 @@
 
             <figure class="product__image-container">
                 <a href="product.html" class="product-img">
-                    <img src="assets/img/product/cart-3.jpg" alt="product">
+                    <img src="/assets/img/product/cart-3.jpg" alt="product">
                 </a>
             </figure>
             <a href="#" class="remove-btn" title="Product remove"><i class="fal fa-times"></i></a>
@@ -102,7 +102,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-2 col-sm-4 col-6 d-none d-lg-inline-block">
                     <div class="logo-area">
-                        <a class="front" href="index.html"><img src="assets/img/logo/header-logo-1.png"
+                        <a class="front" href="index.html"><img src="/assets/img/logo/header-logo-1.png"
                                 alt="Header-logo"></a>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                                 <li>
                                     <div class="header-info-box">
                                         <div class="icon">
-                                            <img src="assets/img/icon/phone.svg" alt="Phone">
+                                            <img src="/assets/img/icon/phone.svg" alt="Phone">
                                         </div>
                                         <div class="text-content">
                                             <span>Call</span>
@@ -125,36 +125,19 @@
                                 <li class="d-none d-sm-inline-block">
                                     <div class="header-info-box">
                                         <div class="icon">
-                                            <img src="assets/img/icon/location.svg" alt="Phone">
+                                            <img src="/assets/img/icon/location.svg" alt="Phone">
                                         </div>
                                         <div class="text-content">
-                                            <span>Location</span>
+                                            <span>Localización:</span>
                                             <div class="right-language">
                                                 <div class="dropdown">
                                                     <a class="language-btn dropdown-toggle" href="#"
                                                         role="button" id="dropdownMenuLink"
                                                         data-bs-toggle="dropdown" aria-expanded="false">
-                                                        USA, New York
+                                                        Calle Lezo 8, 28041 Madrid
                                                         <i class="fal fa-chevron-down"></i>
                                                     </a>
-                                                    <ul class="dropdown-menu"
-                                                        aria-labelledby="dropdownMenuLink">
-                                                        <li>
-                                                            <a class="dropdown-item" href="#">Washington DC</a>
-                                                        </li>
-                                                        <li>
-                                                            <a class="dropdown-item" href="#">Nevrada</a>
-                                                        </li>
-                                                        <li>
-                                                            <a class="dropdown-item" href="#">New Walsh</a>
-                                                        </li>
-                                                        <li>
-                                                            <a class="dropdown-item" href="#">Merily Land</a>
-                                                        </li>
-                                                        <li>
-                                                            <a class="dropdown-item" href="#">Hampshire</a>
-                                                        </li>
-                                                    </ul>
+                                                    
                                                 </div>
                                             </div>
                                         </div>
@@ -163,11 +146,11 @@
                                 <li class="d-none d-lg-inline-block">
                                     <div class="header-info-box">
                                         <div class="icon">
-                                            <img src="assets/img/icon/phone.svg" alt="Phone">
+                                            <img src="/assets/img/icon/phone.svg" alt="Phone">
                                         </div>
                                         <div class="text-content">
-                                            <span>Time</span>
-                                            <h6>10AM - 11:30PM</h6>
+                                            <span>Horario Oficina:</span>
+                                            <h6>8:00 - 20:00</h6>
                                         </div>
                                     </div>
                                 </li>
@@ -196,24 +179,14 @@
                                 <nav id="mobile-menu">
                                     <ul class="menu-list ps-0">
                                         <li>
-                                            <a href="#">
-                                                Home
+                                            <a href="/">
+                                                Inicio
                                             </a>
-                                            <ul class="sub-menu">
-                                                <li>
-                                                    <a href="index.html">Home Style 1</a>
-                                                </li>
-                                                <li>
-                                                    <a href="index-2.html">Home Style 2</a>
-                                                </li>
-                                                <li>
-                                                    <a href="index-3.html">Home Style 3</a>
-                                                </li>
-                                            </ul>
+                                        
                                         </li>
                                         <li>
                                             <a href="#">
-                                                Pages
+                                                Desatascos
                                             </a>
                                             <ul class="sub-menu">
                                                 <li>
@@ -258,7 +231,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="#">Project</a>
+                                            <a href="#">Poceros</a>
                                             <ul class="sub-menu">
                                                 <li>
                                                     <a href="project-grid.html">Project</a>
@@ -285,7 +258,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="contact.html">contact</a>
+                                            <a href="contact.html">contacto</a>
                                         </li>
                                     </ul>
                                 </nav>
@@ -293,7 +266,7 @@
                         </div>
                         <div class="col-6 d-lg-none d-md-inline-block">
                             <div class="logo-area">
-                                <a class="front" href="index.html"><img src="assets/img/logo/header-logo-1.png"
+                                <a class="front" href="index.html"><img src="/assets/img/logo/header-logo-1.png"
                                         alt="Header-logo"></a>
                             </div>
                         </div>
@@ -302,15 +275,10 @@
                                 <div class="search-area me-4">
                                     <a class="search_input" href="#" data-bs-toggle="offcanvas"
                                         data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
-                                        <img src="assets/img/icon/search.svg" alt="Search">
+                                        <img src="/assets/img/icon/search.svg" alt="Search">
                                     </a>
                                 </div>
-                                <div class="cart__menu">
-                                    <a class="shopping-cart" href="#">
-                                        <i class="bi bi-bag"></i>
-                                        <span class="badge">0</span>
-                                    </a>
-                                </div>
+                               
                                 <div class="hamburger-menu">
                                     <a class="round-menu" href="javascript:void(0);">
                                         <i class="far fa-bars"></i>
