--- a/src/components/PreguntasFrecuentes.astro
+++ b/src/components/PreguntasFrecuentes.astro
@@ -2,8 +2,8 @@
 			<section class="faq__area">
 				<div class="grey-bg faq__section__wrapper pt-140 pb-90 pt-lg-60 pb-lg-30">
 					<div class="big-style-text">FAQ</div>
-					<img class="shapes__1" src="assets/img/shape/faq-line-4a.svg" alt="Shape">
-					<img class="shapes__2" src="assets/img/shape/faq-line-5a.svg" alt="Shape">
+					<img class="shapes__1" src="/assets/img/shape/faq-line-4a.svg" alt="Shape">
+					<img class="shapes__2" src="/assets/img/shape/faq-line-5a.svg" alt="Shape">
 					<div class="container">
 						<div class="row align-items-center">
 							<div class="col-lg-6">
@@ -11,7 +11,7 @@
 									<div class="section__title mb-50">
 										<h4 class="sub__title__one mb-0">FAQ</h4>
 										<div class="snake-line mb-15">
-											<img src="assets/img/shape/snake-line-1a.svg" alt="line">
+											<img src="/assets/img/shape/snake-line-1a.svg" alt="line">
 										</div>
 										<h2 class="section__title__one">Frequently Ask Questions</h2>
 									</div>
@@ -75,7 +75,7 @@
 										</div>
 									</div>
 									<a href="contact.html" class="ht_btn hover-bg"><span>Add Questions <img
-												src="assets/img/icon/arrow1.svg" alt=""></span></a>
+												src="/assets/img/icon/arrow1.svg" alt=""></span></a>
 								</div>
 							</div>
 							<div class="col-lg-6">
@@ -85,11 +85,11 @@
 										<h3>25 <span>+</span></h3>
 										<h5>Years Services</h5>
 									</div>
-									<img class="faq__img__main w-100" src="assets/img/faq/faq-img-1a.jpg" alt="Faq">
+									<img class="faq__img__main w-100" src="/assets/img/faq/faq-img-1a.jpg" alt="Faq">
 									<img class="faq__thumb1 d-none d-lg-inline-block"
-										src="assets/img/faq/faq-img-2a.jpg" alt="Faq">
+										src="/assets/img/faq/faq-img-2a.jpg" alt="Faq">
 									<img class="faq__thumb2 d-none d-lg-inline-block"
-										src="assets/img/faq/faq-img-3a.jpg" alt="Faq">
+										src="/assets/img/faq/faq-img-3a.jpg" alt="Faq">
 								</div>
 							</div>
 						</div>
