--- a/src/pages/servicios/index.astro
+++ b/src/pages/servicios/index.astro
@@ -1,7 +1,6 @@
 ---
-import BannerPequeno from "../../components/BannerPequeno.astro";
-import Cta from "../../components/Cta.astro";
-import ProjectGrid from "../../components/ProjectGrid.astro";
+import ServiceDetails from "../../components/ServiceDetails.astro";
+import ServiceText from "../../components/ServiceText.astro";
 import Layout from "../../layouts/Layout.astro";
 const desatascos = await Astro.glob('../../data/desatascos/*.md')
 const [frontmatter] = desatascos
@@ -22,23 +21,9 @@ const processedText = convertUrlsToLinks(loren);
 ---
 
 
-
-
-
 <Layout title={title} descripcion={description} >
-  <BannerPequeno />
-  <ProjectGrid />
-
-{/*<div>
-    <h1 class="flex justify-center text-6xl">desatascos</h1>
-    <h2 class="flex justify-center text-6xl  w-full">{title}</h2>
-    <h3 class="flex justify-center text-6xl w-full">{description}</h3>
-    <a href={description.split(' - ')[1]} target="_blank" rel="noopener noreferrer">Visitar Sitio Web</a>
-    <p set:html={processedText } />  
-</div>
- */}
-
-<Cta />
+<ServiceText title={title} description={description} slug={slug} loren={processedText} />
+<ServiceDetails />
 </Layout>
 
 
